--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,68 @@ body{
 .banner{
 width: 400px;
 }
+
+.add-todo {
+  padding: 15px 8px;
+}
+
+.todo-content {
+  float: left;
+  width: 80% !important;
+  border-radius: 0.25rem 0 0 0.25rem !important;
+}
+
+.btn-todo-add {
+  float: right;
+  width: 20%;
+  border-radius: 0 0.25rem 0.25rem 0 !important;
+}
+
+.App ul {
+  padding: 35px 10px;
+}
+
+.todo-item {
+  height: 40px;
+}
+
+.todo-item-isComplete {
+  float: left;
+  width: 32px;
+  height: 32px;
+  margin: 4px 0;
+  padding: 0 5px !important;
+}
+
+.todo-item-isComplete > i {
+  display: none;
+}
+
+.todo-item-isComplete.active > i {
+  display: inline;
+}
+
+
+.todo-item-content {
+  height: 100%;
+  float: left;
+  width: 80%;
+  line-height: 40px;
+  padding-left: 10px;
+}
+
+.todo-item-content {
+  text-decoration-line: none;
+}
+
+.todo-item-content.isCompleted {
+  text-decoration-line: line-through;
+}
+
+.todo-item-delete {
+  height: 80%;
+  margin: 4px 0;
+  padding: 0 5px !important;
+  float: right;
+  border-color: transparent !important;
+}
